Add proper BioLINCC parsing with links to Publications, some minor refactoring as well